# qcbrunch

./: .dockerignore  .eslintrc.js  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .hadolint.yaml  .now.jsonnet  .now.libsonnet  .nowignore  .snyk  .vercel.jsonnet  .vercel.libsonnet  2018-05-14-a.json  2018-05-14-bagels-brews-and-booch-lil-s-bagels-at-streetside-brewery.json  CNAME  CONTRIBUTING.md  Makefile  README.md  TEMPLATE.html  circle.yml  css-validator.json  data.yaml  deploy.sh  google-pagespeed-insights.json  html-validator.json  index.html  manifest.json  now.dev.json  now.json  package-lock.json  package.json  robots.txt  run.sh  serve.json  sitemap.txt  stats.html  uber_eats.yaml  vercel.json
.github/: foo.workflow  issue_template.md  main.workflow
.vercel/: README.md
css/: app.css  reset.css
events/: app.js  output.html
images/: manifest.json
js/: app.js  astro.js  twemoji.min.js
jsonnet/: README.md  app.js  html.libsonnet  (+3 more)
qcbrunch-cli/: .envrc.example  .gitpod.Dockerfile  .gitpod.yml  Dockerfile  Pipfile  pyproject.toml  setup.cfg  setup.py
qcbrunch-cli/qcbrunchcli/: conf.py  events.py  main.py  utils.py
qcbrunch-cli/qcbrunchcli/commands/: __init__.py  build.py  clean.py  dev.py  google_maps.py  render.py  yelp.py
qcbrunch-gen/: Pipfile  README.md  clean.sh  data.yaml  pyproject.toml  run.sh
qcbrunch-gen/output/my-slug/: index.html
qcbrunch-gen/output/my-slug-2/: index.html
qcbrunch-gen/place-cc/: cookiecutter.json
qcbrunch-gen/place-cc/hooks/: post_gen_project.sh
qcbrunch-gen/place-cc/{{ cookiecutter.slug }}/: index.html  index.j2
(+56 files in other folders)
