[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "qcbrunch"
version = "0.1.0"
dependencies = [
  "Click==7.0",
  "PyYAML==5.4",
]

[project.scripts]
qcbrunch = "qcbrunchcli.main:cli"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages]
find = {}
