[tool.poetry]
name = "qcbrunch-gen"
version = "0.1.0"
description = ""
authors = ["Taylor D. Edmiston <tedmiston@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
cookiecutter = "^1.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
